--- a/trabalhoTeste/css/Inscricao.css
+++ b/trabalhoTeste/css/Inscricao.css
@@ -106,7 +106,7 @@
 		line-height: 90px;
 		margin-top: -12.5px;
 		text-align: left;
-		font-family: Open Sans;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: lighter;
 		font-size: 65px;
@@ -120,7 +120,7 @@
 		width: 637px;
 		height: 189px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
@@ -138,10 +138,10 @@
 	.Line_1 {
 		overflow: visible;
 		position: absolute;
-		width: 37px;
+		width: 100px;
 		height: 2px;
-		left: 981.5px;
-		top: 89.5px;
+		left: 1717px;
+		top: 86.5px;
 		transform: matrix(1,0,0,1,0,0);
 	}
 	#logo-deloitte-photoshop {
@@ -604,7 +604,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -620,7 +620,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -636,7 +636,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -652,7 +652,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -668,7 +668,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -684,7 +684,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -700,7 +700,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -716,7 +716,7 @@
 		line-height: 90px;
 		margin-top: -38px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -732,7 +732,7 @@
 		line-height: 71px;
 		margin-top: -30px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 11px;
