--- a/trabalhoTeste/css/Sobre.css
+++ b/trabalhoTeste/css/Sobre.css
@@ -106,7 +106,7 @@
 		line-height: 90px;
 		margin-top: -12.5px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: lighter;
 		font-size: 65px;
@@ -120,7 +120,7 @@
 		width: 637px;
 		height: 545px;
 		text-align: left;
-		font-family: Oswald;
+		font-family: Arial, Helvetica, sans-serif;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
@@ -153,9 +153,9 @@
 	.Line_1 {
 		overflow: visible;
 		position: absolute;
-		width: 37px;
+		width: 50px;
 		height: 2px;
-		left: 1123px;
+		left: 1120px;
 		top: 86.5px;
 		transform: matrix(1,0,0,1,0,0);
 	}
