--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ header.masthead .bg-circle-4 {
 
 .display-4 {
     font-size: calc(1.475rem + 2.7vw);
-    font-weight: 300;
+    font-weight: bold;
     line-height: 1.2;
 }
 
@@ -689,6 +689,7 @@ header.masthead .bg-circle-4 {
     margin-bottom: -70px;
 }
 
-.bg-black {
-    background-color: black !important;
+.paragraphs {
+    font-size: calc(1rem + .5vw);
+    font-weight: normal;
 }
