--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,140 @@
-                                   :root {
+hr {
+	border: 0;
+	border-top: 3px solid #0dcaf0;
+    width: 50%;
+    margin-left: 0px;
+}
+
+#img1 {
+    position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0px;
+        top:0px;
+		overflow: visible;
+}
+
+
+#Subtitulo1 {
+    font-family:Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size:50px;
+    left: 45%;
+    top: 300px;
+    position: absolute;
+    overflow: visible;
+    width: 700px;
+    white-space: nowrap;
+    line-height: 90px;
+    margin-top: -12.5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: lighter;
+    color: white;
+}
+
+#Subtitulo2 {
+    font-family:Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size:45px;
+    top: 400px;
+    left: 41%;
+    position: absolute;
+    overflow: visible;
+    width: 700px;
+    white-space: nowrap;
+    line-height: 90px;
+    margin-top: -12.5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: lighter;
+    color: white;
+}
+
+#Subtitulosobre {
+    font-family:Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size:45px;
+    top: 400px;
+    left: 45%;
+    position: absolute;
+    overflow: visible;
+    width: 700px;
+    white-space: nowrap;
+    line-height: 90px;
+    margin-top: -12.5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: lighter;
+    color: white;
+}
+
+#Subtituloinscricao {
+    font-family:Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size:45px;
+    top: 400px;
+    left: 46%;
+    position: absolute;
+    overflow: visible;
+    width: 700px;
+    white-space: nowrap;
+    line-height: 90px;
+    margin-top: -12.5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: lighter;
+    color: white;
+}
+
+#Subtitulotestemunhos {
+    font-family:Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size:45px;
+    top: 400px;
+    left: 45%;
+    position: absolute;
+    overflow: visible;
+    width: 700px;
+    white-space: nowrap;
+    line-height: 90px;
+    margin-top: -12.5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: lighter;
+    color: white;
+}
+
+#BtnInscrever {
+    top: 510px;
+    position: absolute;
+    overflow: visible;
+    width: 637px;
+    height: 163px;
+    left: 47%;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    color: rgba(122,122,122,1);
+}
+
+.Button{
+    background-color: #02c4e2;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+}
+                                   
+                                      :root {
                                       --bs-blue: #0d6efd;
                                       --bs-indigo: #6610f2;
                                       --bs-purple: #6f42c1;
