--- a/css/styles.css
+++ b/css/styles.css
@@ -200,12 +200,13 @@ hr {
                                       overflow: hidden;
                                       padding-top: calc(7rem + 72px);
                                       padding-bottom: 7rem;
-                                      background: linear-gradient(0deg, #0dcaf0 0%, #0d6efd 100%);
+                                      background: linear-gradient(90deg, #141A26 0%, #3E6174 100%);
                                       background-repeat: no-repeat;
                                       background-position: center center;
                                       background-attachment: scroll;
                                       background-size: cover;
                                   }
+
                                   
                                   header.masthead .masthead-content {
                                       z-index: 1;
