--- a/css/styles.css
+++ b/css/styles.css
@@ -1,140 +1,65 @@
-hr {
-	border: 0;
-	border-top: 3px solid #0dcaf0;
-    width: 50%;
-    margin-left: 0px;
+.imgfooter{
+    width: 200%;
+    left: 100%;
 }
 
-#img1 {
-    position: absolute;
-		width: 100%;
-		height: 100%;
-		left: 0px;
-        top:0px;
-		overflow: visible;
-}
+/* Rodapé */
+footer{position: fixed; bottom: 0;}
+
+@media (max-height:800px){footer { position: static; } header { padding-top:40px; }}
+
+.footer-distributed{background-color: #292c2f; box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12); box-sizing: border-box; width: 100%;text-align: left; font: bold 16px sans-serif; padding: 55px 50px; margin-top: 80px;}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{display: inline-block; vertical-align: top;}
+
+/* Rodapé lado esquerdo */
+
+.footer-distributed .footer-left{width: 40%;}
+
+/* Logo "BrightStart */
+
+.footer-distributed h3{color:  #ffffff; font: normal 36px 'Cookie', cursive; margin: 0;}
+
+.footer-distributed h3 span{color:  #5383d3;}
+
+/* Links do Rodapé */
+
+.footer-distributed .footer-links{color:  #ffffff; margin: 20px 0 12px; padding: 0;}
+
+.footer-distributed .footer-links a{display:inline-block; line-height: 1.8; text-decoration: none; color:  inherit;}
+
+.footer-distributed .footer-company-name{color:  #8f9296; font-size: 14px; font-weight: normal; margin: 0;}
+
+/* Rodapé centro */
+
+.footer-distributed .footer-center{width: 35%;}
+
+.footer-distributed .footer-center i{background-color:  #33383b; color: #ffffff; font-size: 25px; width: 38px; height: 38px;border-radius: 50%; text-align: center; line-height: 42px; margin: 10px 15px; vertical-align: middle;}
+
+.footer-distributed .footer-center i.fa-envelope{font-size: 17px; line-height: 38px;}
+
+.footer-distributed .footer-center p{display: inline-block; color: #ffffff; vertical-align: middle; margin:0;}
+
+.footer-distributed .footer-center p span{display:block; font-weight: normal; font-size:14px; line-height:2;}
+
+.footer-distributed .footer-center p a{color:  #5383d3; text-decoration: none;;}
 
 
-#Subtitulo1 {
-    font-family:Arial, Helvetica, sans-serif;
-    font-style:normal;
-    font-size:50px;
-    left: 45%;
-    top: 300px;
-    position: absolute;
-    overflow: visible;
-    width: 700px;
-    white-space: nowrap;
-    line-height: 90px;
-    margin-top: -12.5px;
-    text-align: center;
-    font-style: normal;
-    font-weight: lighter;
-    color: white;
-}
+/* Rodapé lado Direito */
 
-#Subtitulo2 {
-    font-family:Arial, Helvetica, sans-serif;
-    font-style:normal;
-    font-size:45px;
-    top: 400px;
-    left: 41%;
-    position: absolute;
-    overflow: visible;
-    width: 700px;
-    white-space: nowrap;
-    line-height: 90px;
-    margin-top: -12.5px;
-    text-align: center;
-    font-style: normal;
-    font-weight: lighter;
-    color: white;
-}
+.footer-distributed .footer-right{width: 20%;}
 
-#Subtitulosobre {
-    font-family:Arial, Helvetica, sans-serif;
-    font-style:normal;
-    font-size:45px;
-    top: 400px;
-    left: 45%;
-    position: absolute;
-    overflow: visible;
-    width: 700px;
-    white-space: nowrap;
-    line-height: 90px;
-    margin-top: -12.5px;
-    text-align: center;
-    font-style: normal;
-    font-weight: lighter;
-    color: white;
-}
+.footer-distributed .footer-company-about{line-height: 20px;color:  #92999f; font-size: 13px; font-weight: normal; margin: 0;}
 
-#Subtituloinscricao {
-    font-family:Arial, Helvetica, sans-serif;
-    font-style:normal;
-    font-size:45px;
-    top: 400px;
-    left: 46%;
-    position: absolute;
-    overflow: visible;
-    width: 700px;
-    white-space: nowrap;
-    line-height: 90px;
-    margin-top: -12.5px;
-    text-align: center;
-    font-style: normal;
-    font-weight: lighter;
-    color: white;
-}
+.footer-distributed .footer-company-about span{display: block; color:  #ffffff; font-size: 14px; font-weight: bold; margin-bottom: 20px;}
 
-#Subtitulotestemunhos {
-    font-family:Arial, Helvetica, sans-serif;
-    font-style:normal;
-    font-size:45px;
-    top: 400px;
-    left: 45%;
-    position: absolute;
-    overflow: visible;
-    width: 700px;
-    white-space: nowrap;
-    line-height: 90px;
-    margin-top: -12.5px;
-    text-align: center;
-    font-style: normal;
-    font-weight: lighter;
-    color: white;
-}
+.footer-distributed .footer-icons{margin-top: 25px;}
 
-#BtnInscrever {
-    top: 510px;
-    position: absolute;
-    overflow: visible;
-    width: 637px;
-    height: 163px;
-    left: 47%;
-    text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    color: rgba(122,122,122,1);
-}
-
-.Button{
-    background-color: #02c4e2;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-}
-                                   
-                                      :root {
+.footer-distributed .footer-icons a{display: inline-block; width: 35px; height: 35px; cursor: pointer; background-color:  #33383b;border-radius: 2px; font-size: 20px; color: #ffffff; text-align: center; line-height: 35px; margin-right: 3px; margin-bottom: 5px;}
+  
+                                     :root {
                                       --bs-blue: #0d6efd;
                                       --bs-indigo: #6610f2;
                                       --bs-purple: #6f42c1;
@@ -262,10 +187,10 @@ hr {
                                           padding-bottom: 10rem;
                                       }
                                       header.masthead .masthead-content .masthead-heading {
-                                          font-size: 6rem;
+                                          font-size: 4,5rem;
                                       }
                                       header.masthead .masthead-content .masthead-subheading {
-                                          font-size: 4rem;
+                                          font-size: 2rem;
                                       }
                                   }
                                   
@@ -839,7 +764,7 @@ hr {
                                       border-radius: 5px;
                                       background-color: white;
                                       padding: 20px;
-                                      width: 70%;
+                                      width: 40%;
                                       margin: auto;
                                       margin-top: 5%;
                                   }
