--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 /* Rodapé */
-footer{position: fixed; bottom: 0;}
+footer{position: fixed; bottom: 1;}
 
 @media (max-height:800px){footer { position: static; } header { padding-top:40px; }}
 
@@ -309,6 +309,7 @@ footer{position: fixed; bottom: 0;}
                                   
                                   .p-5 {
                                       padding: 3rem !important;
+                                      text-decoration: none;
                                   }
                                   
                                   .img-fluid {
@@ -811,4 +812,21 @@ footer{position: fixed; bottom: 0;}
                                   
                                   .active {
                                       color: #75B625
+                                  }
+                                  a:link {
+                                    text-decoration: none;
+                                    color: #75B625;
+                                  }
+                                  
+                                  a:visited {
+                                    text-decoration: none;
+                                    color: #75B625;
+                                  }
+                                  
+                                  a:hover {
+                                    text-decoration: none;
+                                  }
+                                  
+                                  a:active {
+                                    text-decoration: none;
                                   }
